tests/test_proof/bad/enums-nonbool-empty.catala_en
## Test

```catala
declaration enumeration T:
   -- C content boolean
   -- D content integer

declaration enumeration S:
    -- A content integer
    -- B content T

declaration scope A:
  context x content integer
  context y content S

scope A:
  definition y equals B content (D content 1)
  definition x under condition (match y with pattern -- A of a: 1 -- B of b: 2) > 1 consequence equals 0
  definition x under condition match y with pattern -- A of a: a < 0 -- B of b: false consequence equals 1
```

```catala-test-inline
$ catala Proof --disable_counterexamples
[ERROR] [A.x] This variable might return an empty error:
  --> tests/test_proof/bad/enums-nonbool-empty.catala_en:13.10-11
   |
13 |   context x content integer
   |           ^
   + Test
Counterexample generation is disabled so none was generated.
```
